Setting CYGWIN=nodosfilewarning env variable on windows